# live2d-rs

./: .gitignore  AGENTS.md  Cargo.toml  MOC2-RUST-DESIGN.md  README.md  README.zh-CN.md  check-wm.sh  live2d  todolist.txt  代码解耦.txt
.cargo/: config.toml
.github/workflows/: build.yml
.omo/drafts/: model-search-tab.md
.omo/plans/: 2026-06-22-moc2-phase4-runtime.md  data-directory-and-model-memory.md  model-search-tab.md
.omo/run-continuation/: ses_10adbcc1cffel14qqlKIETnf4s.json  ses_10ae1099bffeiVimQJrZHnwSWx.json  ses_10ae94740ffe5Gj9iSx6CqSHxT.json  ses_10aeb3f25ffevokVBZIv2Fepoh.json
docs/: VISION_ARCHITECTURE.md  wayland-screen-capture-research.md
docs/architecture/: tool-calling-arch.md
docs/implementation/: tool-calling-plan.md
docs/superpowers/plans/: 2026-06-24-wayland-pet-mode-layer-shell.md  2026-06-25-move-motion-to-sctk.md  2026-06-26-v2-audio-response.md  2026-06-28-ai-chat-mvp-process.md  2026-06-28-character-cards.md
docs/superpowers/specs/: 2026-06-28-ai-chat-mvp-design.md  2026-06-28-character-cards-design.md
docs/technical/: wayland-minimize-invisible.md
examples/: probe_moc2.rs
live2d-core/: Cargo.toml
live2d-core-sys/: Cargo.toml  build.rs
live2d-core-sys/src/: lib.rs
live2d-core/src/: canvas.rs  drawable.rs  error.rs  lib.rs  moc.rs  model.rs  offscreen.rs  param.rs  part.rs
live2d-core/src/moc2/: PROGRESS.md  deformer.rs  mod.rs  pivot.rs  reader.rs  resolve.rs  resolve_util.rs  runtime.rs  types.rs
live2d-core/tests/: parse_moc2.rs  probe_drawable_state.rs  probe_moc2.rs
live2d-py/: .clang-format  .gitattributes  .gitignore  CMakeLists.core.txt  CMakeLists.txt  CONTRIBUTING.en.md  CONTRIBUTING.md  MANIFEST.in  pyproject.toml  setup.py
live2d-py/.github/ISSUE_TEMPLATE/: bug-report.en.md  bug-反馈.md
live2d-py/.github/workflows/: build-live2dviewer.yml
live2d-py/Live2D/: README.md
live2d-py/Live2D/Glad/: CMakeLists.txt  README.md
live2d-py/Live2D/V2/: CMakeLists.txt
live2d-py/Live2D/V2/Framework/: L2DBaseModel.hpp  L2DModelMatrix.cpp  L2DModelMatrix.hpp  LAppModel.cpp  LAppModel.hpp  MatrixManager.cpp
live2d-py/Live2DViewer/: CMakeLists.txt  Live2DView.cpp  Live2DView.hpp  Live2DView.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
live2d-py/Live2DViewer/scene/: Live2DScene.cpp  Live2DScene.hpp
live2d-py/Resources/: .gitignore
live2d-py/Resources/v2/托尔/: expressions_0_file_0.json  expressions_1_file_0.json  expressions_2_file_0.json  expressions_3_file_0.json  expressions_4_file_0.json  expressions_5_file_0.json  expressions_6_file_0.json  expressions_7_file_0.json  expressions_8_file_0.json  expressions_9_file_0.json  model0.json
live2d-py/cmake/: Live2DViewer.cmake
live2d-py/docs/: LIVE2D_V2_RENDERER.md
live2d-py/examples/: README.en.md  README.md  main_pyqt6_canvas.py  main_pyqt6_simple.py  main_tkinter.py  motion_fix.py  resources.py
live2d-py/examples/mediapipe_capture/: calculation.py  facial_params.py  new_capture_config.py  new_capture_task.py
live2d-py/tests/: .gitignore
live2d-py/v2_c_api/: CMakeLists.txt  v2_c_api.cpp  v2_c_api.h
live2d-v2-core/: Cargo.toml
live2d-v2-core-sys/: Cargo.toml  build.rs  wrapper.h
live2d-v2-core-sys/src/: lib.rs
live2d-v2-core/src/: lib.rs  model.rs
live2d-viewer/: Cargo.toml  build.rs
live2d-viewer/src/: app.rs  audio.rs  camera.rs  data_dir.rs  db.rs  gui.rs  main.rs  model_adapter.rs  model_loader.rs  text_renderer.rs  texture.rs  toolbar.rs  tray.rs  v2_motion_sound.rs  wayland_pet.rs
live2d-viewer/src/ai/: character_card_panel.rs  chat_panel.rs  client.rs  config.rs  mod.rs  settings_panel.rs  tts.rs  types.rs  vision.rs  vision_local.rs
live2d-viewer/src/ai/tools/: executors.rs  mod.rs  registry.rs  safety.rs
live2d-viewer/src/capture/: frame.rs  mod.rs  portal_pipewire.rs  wlr_screencopy.rs
live2d-viewer/src/motion/: breath.rs  curve.rs  expression.rs  eye_blink.rs  json.rs  look.rs  mod.rs  motion.rs  physics.rs  queue.rs
live2d-viewer/src/renderer/: mask_fbo.rs  mesh.rs  mod.rs  shader.rs
live2d-viewer/src/theme/: mod.rs
moc-parser/: Cargo.toml
moc-parser/src/: error.rs  lib.rs  reader.rs  registry.rs  schema.rs
