[package]
name = "live2d-viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
live2d-core = { path = "../live2d-core" }
live2d-core-sys = { path = "../live2d-core-sys" }

winit = { version = "0.29", features = ["rwh_05"] }
glutin = "0.31"
glow = "0.13"
egui = "0.27"
egui-winit = "0.27"
egui_glow = "0.27"
image = "0.25"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
raw-window-handle = "0.5"
