[package]
name = "live2d-viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["static-link"]
static-link = ["live2d-core-sys/static-link"]

[dependencies]
live2d-core = { path = "../live2d-core" }
live2d-core-sys = { path = "../live2d-core-sys" }
live2d-v2-core = { path = "../live2d-v2-core" }
live2d-v2-core-sys = { path = "../live2d-v2-core-sys" }

winit = { version = "0.29", features = ["rwh_05"] }
glutin = "0.31"
glow = "0.13"
egui = "0.27"
egui-winit = "0.27"
egui_glow = "0.27"
image = "0.25"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rodio = "0.20"
raw-window-handle = "0.5"
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version = "0.24", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
smithay-client-toolkit = { version = "0.20", default-features = false, features = [
    "calloop",
] }
