[package]
name = "live2d-viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["static-link", "ai"]
static-link = ["live2d-core-sys/static-link"]
ai = []
capture = ["wayland-client", "wayland-protocols-wlr"]

[dependencies]
live2d-core = { path = "../live2d-core" }
live2d-core-sys = { path = "../live2d-core-sys" }
live2d-v2-core = { path = "../live2d-v2-core" }
live2d-v2-core-sys = { path = "../live2d-v2-core-sys" }

winit = { version = "0.29", features = ["rwh_05"] }
glutin = "0.31"
glow = "0.13"
egui = "0.27"
egui-winit = "0.27"
egui_glow = "0.27"
image = "0.25"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rodio = "0.20"
raw-window-handle = "0.5"
rfd = "0.14"
libsql = { version = "0.9", default-features = false, features = ["core"] }
ab_glyph = "0.2"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", optional = true }
libc = "0.2"
dirs = "5"
pulldown-cmark = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version = "0.24", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["blocking", "tokio"] }
smithay-client-toolkit = { version = "0.20", default-features = false, features = [
    "calloop",
] }
